fix image too large

--- a/source/template/blocks/_causes/_causes.sass
+++ b/source/template/blocks/_causes/_causes.sass
@@ -38,6 +38,7 @@
 		position: absolute
 		bottom: 0
 		width: 50%
+		max-width: 800px
 		right: 0
 		pointer-events: none
 	// .heading .button
